--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -7,5 +7,10 @@
 }
 
 body{
-    font-family: cursive;
+    font-family: 'PT Sans';
+    background-color: #FFFFFF;
+    overflow-x: hidden;
+}
+h1, h2, h3, h4{
+    font-family: 'Exo 2';
 }
